--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "type": "module",
   "scripts": {
     "pretest": "npm run lint",
-    "test": "npm run vscode:test",
+    "test": "c8 npm run vscode:test",
     "clean": "del-cli build",
     "compile": "npm run lint && npm run clean && tsc",
     "build": "npm run compile",
@@ -28,7 +28,12 @@
     "access": "public",
     "tag": "latest"
   },
-  "keywords": ["adonisjs", "cors-middleware", "cors", "adonisjs-core"],
+  "keywords": [
+    "adonisjs",
+    "cors-middleware",
+    "cors",
+    "adonisjs-core"
+  ],
   "author": "adonisjs,virk",
   "license": "MIT",
   "devDependencies": {
@@ -40,6 +45,7 @@
     "@japa/spec-reporter": "^1.1.12",
     "@swc/core": "^1.3.27",
     "@types/node": "^18.0.0",
+    "c8": "^7.12.0",
     "del-cli": "^4.0.1",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
@@ -92,5 +98,14 @@
     "tag": "latest",
     "branch": "main",
     "anyBranch": false
+  },
+  "c8": {
+    "reporter": [
+      "text",
+      "html"
+    ],
+    "exclude": [
+      "tests/**"
+    ]
   }
 }
