--- a/package.json
+++ b/package.json
@@ -2,31 +2,30 @@
   "name": "@adonisjs/cors",
   "version": "1.0.7",
   "description": "CORS middleware for AdonisJS HTTP server",
+  "main": "build/index.js",
+  "type": "module",
   "files": [
-    "src",
-    "index.js"
+    "build/src",
+    "build/index.d.ts",
+    "build/index.js"
   ],
   "exports": {
-    ".": "./index.js"
+    ".": "./build/index.js",
+    "./types": "./build/src/types.js"
   },
-  "type": "module",
   "scripts": {
     "pretest": "npm run lint",
     "test": "c8 npm run vscode:test",
     "clean": "del-cli build",
     "compile": "npm run lint && npm run clean && tsc",
     "build": "npm run compile",
-    "release": "np --message=\"chore(release): %s\"",
+    "release": "np",
     "version": "npm run build",
+    "format": "prettier --write .",
     "prepublishOnly": "npm run build",
     "lint": "eslint . --ext=.ts",
-    "format": "prettier --write .",
     "sync-labels": "github-label-sync --labels .github/labels.json adonisjs/cors",
     "vscode:test": "node --loader=ts-node/esm bin/test.ts"
-  },
-  "publishConfig": {
-    "access": "public",
-    "tag": "latest"
   },
   "keywords": [
     "adonisjs",
@@ -37,6 +36,7 @@
   "author": "adonisjs,virk",
   "license": "MIT",
   "devDependencies": {
+    "@adonisjs/http-server": "^6.5.0-0",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@japa/assert": "^1.3.4",
@@ -45,6 +45,7 @@
     "@japa/spec-reporter": "^1.1.12",
     "@swc/core": "^1.3.27",
     "@types/node": "^18.0.0",
+    "@types/supertest": "^2.0.12",
     "c8": "^7.12.0",
     "del-cli": "^4.0.1",
     "eslint": "^8.17.0",
@@ -55,9 +56,21 @@
     "husky": "^8.0.3",
     "np": "^7.6.1",
     "prettier": "^2.7.1",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.3"
   },
+  "peerDependencies": {
+    "@adonisjs/http-server": "^6.5.0-0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/adonisjs/cors.git"
+  },
+  "bugs": {
+    "url": "https://github.com/adonisjs/cors/issues"
+  },
+  "homepage": "https://github.com/adonisjs/cors#readme",
   "eslintConfig": {
     "extends": [
       "plugin:adonis/typescriptPackage",
@@ -93,6 +106,10 @@
       "@commitlint/config-conventional"
     ]
   },
+  "publishConfig": {
+    "access": "public",
+    "tag": "next"
+  },
   "np": {
     "message": "chore(release): %s",
     "tag": "latest",
@@ -105,7 +122,8 @@
       "html"
     ],
     "exclude": [
-      "tests/**"
+      "tests/**",
+      ".yalc/**"
     ]
   }
 }
