--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adonisjs/cors",
-  "version": "1.0.7",
+  "version": "2.0.0-0",
   "description": "CORS middleware for AdonisJS HTTP server",
   "main": "build/index.js",
   "type": "module",
