--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "author": "adonisjs,virk",
   "license": "MIT",
   "devDependencies": {
-    "@adonisjs/http-server": "^6.8.0-0",
+    "@adonisjs/core": "^6.0.0-0",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "@japa/assert": "^1.4.1",
@@ -67,7 +67,7 @@
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "@adonisjs/http-server": "^6.5.0-0"
+    "@adonisjs/core": "^6.0.0-0"
   },
   "repository": {
     "type": "git",
