--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build/stubs",
     "build/providers",
     "build/index.d.ts",
-    "build/index.js"
+    "build/index.js",
+    "build/configure.d.ts",
+    "build/configure.js"
   ],
   "exports": {
     ".": "./build/index.js",
@@ -41,10 +43,11 @@
   "author": "adonisjs,virk",
   "license": "MIT",
   "devDependencies": {
-    "@adonisjs/core": "^6.0.1-0",
+    "@adonisjs/core": "^6.1.1-0",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "@japa/assert": "^1.4.1",
+    "@japa/file-system": "^1.0.1",
     "@japa/run-failed-tests": "^1.1.1",
     "@japa/runner": "^2.5.0",
     "@japa/spec-reporter": "^1.3.3",
@@ -67,7 +70,7 @@
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "@adonisjs/core": "^6.0.1-0"
+    "@adonisjs/core": "^6.1.1-0"
   },
   "repository": {
     "type": "git",
