--- a/package.json
+++ b/package.json
@@ -43,34 +43,31 @@
   "author": "adonisjs,virk",
   "license": "MIT",
   "devDependencies": {
-    "@adonisjs/core": "^6.1.1-0",
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.4.4",
-    "@japa/assert": "^1.4.1",
-    "@japa/file-system": "^1.0.1",
-    "@japa/run-failed-tests": "^1.1.1",
-    "@japa/runner": "^2.5.0",
-    "@japa/spec-reporter": "^1.3.3",
-    "@swc/core": "^1.3.35",
-    "@types/node": "^18.14.0",
+    "@adonisjs/core": "^6.1.5-12",
+    "@adonisjs/eslint-config": "^1.1.8",
+    "@adonisjs/prettier-config": "^1.1.8",
+    "@commitlint/cli": "^17.6.7",
+    "@commitlint/config-conventional": "^17.6.7",
+    "@japa/assert": "^2.0.0-1",
+    "@japa/file-system": "^2.0.0-1",
+    "@japa/runner": "^3.0.0-6",
+    "@swc/core": "^1.3.71",
+    "@types/node": "^20.4.5",
     "@types/supertest": "^2.0.12",
-    "c8": "^7.13.0",
+    "c8": "^8.0.1",
     "copyfiles": "^2.4.1",
     "del-cli": "^5.0.0",
-    "eslint": "^8.34.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-adonis": "^3.0.3",
-    "eslint-plugin-prettier": "^4.0.0",
-    "github-label-sync": "^2.2.0",
+    "eslint": "^8.45.0",
+    "github-label-sync": "^2.3.1",
     "husky": "^8.0.3",
-    "np": "^7.6.1",
-    "prettier": "^2.8.4",
+    "np": "^8.0.4",
+    "prettier": "^3.0.0",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.1.6"
   },
   "peerDependencies": {
-    "@adonisjs/core": "^6.1.1-0"
+    "@adonisjs/core": "^6.1.5-12"
   },
   "repository": {
     "type": "git",
@@ -80,36 +77,6 @@
     "url": "https://github.com/adonisjs/cors/issues"
   },
   "homepage": "https://github.com/adonisjs/cors#readme",
-  "eslintConfig": {
-    "extends": [
-      "plugin:adonis/typescriptPackage",
-      "prettier"
-    ],
-    "plugins": [
-      "prettier"
-    ],
-    "rules": {
-      "prettier/prettier": [
-        "error",
-        {
-          "endOfLine": "auto"
-        }
-      ]
-    }
-  },
-  "eslintIgnore": [
-    "build"
-  ],
-  "prettier": {
-    "trailingComma": "es5",
-    "semi": false,
-    "singleQuote": true,
-    "useTabs": false,
-    "quoteProps": "consistent",
-    "bracketSpacing": true,
-    "arrowParens": "always",
-    "printWidth": 100
-  },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
@@ -135,10 +102,8 @@
       ".yalc/**"
     ]
   },
-  "adonisjs": {
-    "stubs": "./build/stubs",
-    "providers": [
-      "@adonisjs/cors/cors_provider"
-    ]
-  }
+  "eslintConfig": {
+    "extends": "@adonisjs/eslint-config/package"
+  },
+  "prettier": "@adonisjs/prettier-config"
 }
