--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "pretest": "npm run lint",
-    "test": "c8 npm run vscode:test",
+    "test": "c8 npm run quick:test",
     "clean": "del-cli build",
     "typecheck": "tsc --noEmit",
     "copy:templates": "copyfiles \"stubs/**/*.stub\" build",
@@ -36,7 +36,7 @@
     "prepublishOnly": "npm run build",
     "lint": "eslint . --ext=.ts",
     "sync-labels": "github-label-sync --labels .github/labels.json adonisjs/cors",
-    "vscode:test": "node --loader=ts-node/esm bin/test.ts"
+    "quick:test": "node --loader=ts-node/esm bin/test.ts"
   },
   "keywords": [
     "adonisjs",
@@ -47,8 +47,8 @@
   "author": "adonisjs,virk",
   "license": "MIT",
   "devDependencies": {
-    "@adonisjs/assembler": "^6.1.3-18",
-    "@adonisjs/core": "^6.1.5-19",
+    "@adonisjs/assembler": "^6.1.3-22",
+    "@adonisjs/core": "^6.1.5-24",
     "@adonisjs/eslint-config": "^1.1.8",
     "@adonisjs/prettier-config": "^1.1.8",
     "@commitlint/cli": "^17.7.1",
@@ -72,7 +72,7 @@
     "typescript": "^5.1.6"
   },
   "peerDependencies": {
-    "@adonisjs/core": "^6.1.5-19"
+    "@adonisjs/core": "^6.1.5-24"
   },
   "repository": {
     "type": "git",
@@ -93,7 +93,7 @@
   },
   "np": {
     "message": "chore(release): %s",
-    "tag": "latest",
+    "tag": "next",
     "branch": "main",
     "anyBranch": false
   },
