--- a/package.json
+++ b/package.json
@@ -5,13 +5,7 @@
   "main": "build/index.js",
   "type": "module",
   "files": [
-    "build/src",
-    "build/stubs",
-    "build/providers",
-    "build/index.d.ts",
-    "build/index.js",
-    "build/configure.d.ts",
-    "build/configure.js"
+    "build"
   ],
   "exports": {
     ".": "./build/index.js",
@@ -27,8 +21,8 @@
     "test": "c8 npm run quick:test",
     "clean": "del-cli build",
     "typecheck": "tsc --noEmit",
-    "copy:templates": "copyfiles \"stubs/**/*.stub\" build",
-    "compile": "npm run lint && npm run clean && tsc && npm run copy:templates",
+    "copy:templates": "copyfiles --up 1 \"stubs/**/*.stub\" build",
+    "compile": "npm run lint && npm run clean && tsup-node && npm run copy:templates",
     "build": "npm run compile",
     "release": "np",
     "version": "npm run build",
@@ -69,6 +63,7 @@
     "prettier": "^3.0.3",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
+    "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
@@ -110,5 +105,18 @@
   "eslintConfig": {
     "extends": "@adonisjs/eslint-config/package"
   },
-  "prettier": "@adonisjs/prettier-config"
+  "prettier": "@adonisjs/prettier-config",
+   "tsup": {
+    "entry": [
+      "./index.ts",
+      "./src/types.ts",
+      "./src/cors_middleware.ts",
+      "./providers/cors_provider.ts"
+    ],
+    "outDir": "./build",
+    "clean": true,
+    "format": "esm",
+    "dts": true,
+    "target": "esnext"
+  }
 }
